--- a/src/components/Stages.astro
+++ b/src/components/Stages.astro
@@ -1,26 +1,30 @@
+---
+import * as m from "../paraglide/messages.js"
+---
+
 <section class="stages">
 	<div class="stages__container">
-		<h2 class="stages__title title">Этапы Вашего Проекта с Нами</h2>
+		<h2 class="stages__title title">{m.stages2Title()}</h2>
 		<ul class="stages__items">
 			<li class="stages__item">
 				<span class="stages__number">01</span>
-				<h3>Первичная консультация</h3>
-				<p>Обсудите цели, бюджет и сроки проекта с нашей командой экспертов</p>
+				<h3>{m.stage1Title()}</h3>
+				<p>{m.stage1Description()}</p>
 			</li>
 			<li class="stages__item">
 				<span class="stages__number">02</span>
-				<h3>Планирование работ</h3>
-				<p>Комплексный план, включающий дизайн, материалы и графики работ</p>
+				<h3>{m.stage2Title()}</h3>
+				<p>{m.stage2Description()}</p>
 			</li>
 			<li class="stages__item">
 				<span class="stages__number">03</span>
-				<h3>Выполнение работ</h3>
-				<p>Реализация плана с помощью квалифицированных специалистов, обеспечивающих качество</p>
+				<h3>{m.stage3Title()}</h3>
+				<p>{m.stage3Description()}</p>
 			</li>
 			<li class="stages__item">
 				<span class="stages__number">04</span>
-				<h3>Заключительный обзор</h3>
-				<p>Мы решаем любые проблемы до завершения проекта.</p>
+				<h3>{m.stage4Title()}</h3>
+				<p>{m.stage4Description()}</p>
 			</li>
 		</ul>
 	</div>
