--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,34 +1,38 @@
+---
+import * as m from "../paraglide/messages.js"
+---
+
 <footer class="footer">
 	<div class="footer__container">
 		<div class="footer__actions">
 			<div class="footer__logo">
 				<a href="/"><img src="/logo.webp" alt="BuildGo logo"></a>
-				<h3 class="footer__title">Мы - решение для любого строительства</h3>
+				<h3 class="footer__title">{m.footerTitle()}</h3>
 			</div>
 			<div class="footer__address">
-				<h3 class="footer__label">Адрес</h3>
-				<a class="map" href="http://maps.google.com/" target="_blank">3891 Ranch View Ричардсон, Калифорния 62639</a>
-				<a class="phone" href="tel:+12325656858">+123 (256) 568 58</a>
+				<h3 class="footer__label">{m.footerAddressLabel()}</h3>
+				<a class="map" href="http://maps.google.com/" target="_blank">{m.footerAddress()}</a>
+				<a class="phone" href="tel:+12325656858">{m.footerPhone()}</a>
 			</div>
 			<div class="footer__links">
-				<h3 class="footer__label">Ссылки</h3>
+				<h3 class="footer__label">{m.footerLinksLabel()}</h3>
 				<ul>
-					<li><a href="#">О нас</a></li>
-					<li><a href="#">Услуги</a></li>
-					<li><a href="#">Наши работы</a></li>
-					<li><a href="#">Связаться с нами</a></li>
+					<li><a href="#">{m.footerLinkAbout()}</a></li>
+					<li><a href="#">{m.footerLinkServices()}</a></li>
+					<li><a href="#">{m.footerLinkWorks()}</a></li>
+					<li><a href="#">{m.footerLinkContact()}</a></li>
 				</ul>
 			</div>
 			<div class="footer__support">
-				<h3 class="footer__label">Поддержка</h3>
+				<h3 class="footer__label">{m.footerSupportLabel()}</h3>
 				<ul>
-					<li><a href="#" target="_blank">Условия и положения</a></li>
-					<li><a href="#" target="_blank">Политика конфиденциальности</a></li>
+					<li><a href="#" target="_blank">{m.footerSupportTerms()}</a></li>
+					<li><a href="#" target="_blank">{m.footerSupportPrivacy()}</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
 	<div class="footer__copyright">
-		<p>Copyright 2025 – All Rights Reserved</p>
+		<p>{m.footerCopyright()}</p>
 	</div>
 </footer>
