--- a/src/components/News.astro
+++ b/src/components/News.astro
@@ -1,70 +1,81 @@
+---
+import * as m from "../paraglide/messages.js"
+---
+
 <section class="news">
 	<div class="news__container">
-		<h2 class="news__title title">Новости</h2>
+		<h2 class="news__title title">{m.newsTitle()}</h2>
 		<div class="news__slider swiper swiper-initialized swiper-horizontal swiper-autoheight swiper-backface-hidden">
 			<div class="news__wrapper swiper-wrapper" style="height: 537px; transition-duration: 0ms; transform: translate3d(-1365px, 0px, 0px); transition-delay: 0ms;">
-				
-				
-				
-				
-				
-				
-			<div class="news__slide swiper-slide slide-news" data-swiper-slide-index="1" style="width: 430px; margin-right: 25px;">
+				<div class="news__slide swiper-slide slide-news" data-swiper-slide-index="1" style="width: 430px; margin-right: 25px;">
 					<a href="#" class="slide-news__image">
 						<img class="ibg" src="images/news-02.webp" alt="News">
-						<span class="slide-news__date-label _icon-calendar">26 сен</span>
+						<span class="slide-news__date-label _icon-calendar">{m.newsDate1()}</span>
 					</a>
 					<div class="slide-news__content">
-						<a href="#" class="slide-news__text">Как погода может повлиять на строительный проект</a>
-						<a href="#" class="slide-news__read-button button _icon-arrow-up-right">Читать далее</a>
+						<a href="#" class="slide-news__text">{m.newsText1()}</a>
+						<a href="#" class="slide-news__read-button button _icon-arrow-up-right">{m.newsReadMore()}</a>
 					</div>
-				</div><div class="news__slide swiper-slide slide-news" data-swiper-slide-index="2" style="width: 430px; margin-right: 25px;">
+				</div>
+				<div class="news__slide swiper-slide slide-news" data-swiper-slide-index="2" style="width: 430px; margin-right: 25px;">
 					<a href="#" class="slide-news__image">
 						<img class="ibg" src="images/news-03.webp" alt="News">
-						<span class="slide-news__date-label _icon-calendar">28 сен</span>
+						<span class="slide-news__date-label _icon-calendar">{m.newsDate2()}</span>
 					</a>
 					<div class="slide-news__content">
-						<a href="#" class="slide-news__text">Как выбрать идеальную строительную компанию</a>
-						<a href="#" class="slide-news__read-button button _icon-arrow-up-right">Читать далее</a>
+						<a href="#" class="slide-news__text">{m.newsText2()}</a>
+						<a href="#" class="slide-news__read-button button _icon-arrow-up-right">{m.newsReadMore()}</a>
 					</div>
-				</div><div class="news__slide swiper-slide slide-news swiper-slide-prev" data-swiper-slide-index="3" style="width: 430px; margin-right: 25px;">
+				</div>
+				<div class="news__slide swiper-slide slide-news swiper-slide-prev" data-swiper-slide-index="3" style="width: 430px; margin-right: 25px;">
 					<a href="#" class="slide-news__image">
 						<img class="ibg" src="images/news-01.webp" alt="News">
-						<span class="slide-news__date-label _icon-calendar">20 сен</span>
+						<span class="slide-news__date-label _icon-calendar">{m.newsDate3()}</span>
 					</a>
 					<div class="slide-news__content">
-						<a href="#" class="slide-news__text">Ключевые шаги для обеспечения бесперебойного процесса строительства</a>
-						<a href="#" class="slide-news__read-button button _icon-arrow-up-right">Читать далее</a>
+						<a href="#" class="slide-news__text">{m.newsText3()}</a>
+						<a href="#" class="slide-news__read-button button _icon-arrow-up-right">{m.newsReadMore()}</a>
 					</div>
-				</div><div class="news__slide swiper-slide slide-news swiper-slide-active" data-swiper-slide-index="4" style="width: 430px; margin-right: 25px;">
+				</div>
+				<div class="news__slide swiper-slide slide-news swiper-slide-active" data-swiper-slide-index="4" style="width: 430px; margin-right: 25px;">
 					<a href="#" class="slide-news__image">
 						<img class="ibg" src="images/news-02.webp" alt="News">
-						<span class="slide-news__date-label _icon-calendar">26 сен</span>
+						<span class="slide-news__date-label _icon-calendar">{m.newsDate1()}</span>
 					</a>
 					<div class="slide-news__content">
-						<a href="#" class="slide-news__text">Как погода может повлиять на строительный проект</a>
-						<a href="#" class="slide-news__read-button button _icon-arrow-up-right">Читать далее</a>
+						<a href="#" class="slide-news__text">{m.newsText1()}</a>
+						<a href="#" class="slide-news__read-button button _icon-arrow-up-right">{m.newsReadMore()}</a>
 					</div>
-				</div><div class="news__slide swiper-slide slide-news swiper-slide-next" data-swiper-slide-index="5" style="width: 430px; margin-right: 25px;">
+				</div>
+				<div class="news__slide swiper-slide slide-news swiper-slide-next" data-swiper-slide-index="5" style="width: 430px; margin-right: 25px;">
 					<a href="#" class="slide-news__image">
 						<img class="ibg" src="images/news-03.webp" alt="News">
-						<span class="slide-news__date-label _icon-calendar">28 сен</span>
+						<span class="slide-news__date-label _icon-calendar">{m.newsDate2()}</span>
 					</a>
 					<div class="slide-news__content">
-						<a href="#" class="slide-news__text">Как выбрать идеальную строительную компанию</a>
-						<a href="#" class="slide-news__read-button button _icon-arrow-up-right">Читать далее</a>
+						<a href="#" class="slide-news__text">{m.newsText2()}</a>
+						<a href="#" class="slide-news__read-button button _icon-arrow-up-right">{m.newsReadMore()}</a>
 					</div>
-				</div><div class="news__slide swiper-slide slide-news" data-swiper-slide-index="0" style="width: 430px; margin-right: 25px;">
+				</div>
+				<div class="news__slide swiper-slide slide-news" data-swiper-slide-index="0" style="width: 430px; margin-right: 25px;">
 					<a href="#" class="slide-news__image">
 						<img class="ibg" src="images/news-01.webp" alt="News">
-						<span class="slide-news__date-label _icon-calendar">20 сен</span>
+						<span class="slide-news__date-label _icon-calendar">{m.newsDate3()}</span>
 					</a>
 					<div class="slide-news__content">
-						<a href="#" class="slide-news__text">Ключевые шаги для обеспечения бесперебойного процесса строительства</a>
-						<a href="#" class="slide-news__read-button button _icon-arrow-up-right">Читать далее</a>
+						<a href="#" class="slide-news__text">{m.newsText3()}</a>
+						<a href="#" class="slide-news__read-button button _icon-arrow-up-right">{m.newsReadMore()}</a>
 					</div>
-				</div></div>
-			<div class="news__slider-pagination swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal"><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span><span class="swiper-pagination-bullet"></span></div>
+				</div>
+			</div>
+			<div class="news__slider-pagination swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal">
+				<span class="swiper-pagination-bullet"></span>
+				<span class="swiper-pagination-bullet"></span>
+				<span class="swiper-pagination-bullet"></span>
+				<span class="swiper-pagination-bullet"></span>
+				<span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span>
+				<span class="swiper-pagination-bullet"></span>
+			</div>
 		</div>
 	</div>
 </section>
