--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -1,9 +1,12 @@
+---
+import * as m from "../paraglide/messages.js"
+---
 <section class="portfolio">
 	<div class="portfolio__container">
-		<h2 class="portfolio__title title">Наши работы</h2>
+		<h2 class="portfolio__title title">{m.ourWorks()}</h2>
 		<div class="portfolio__navigation">
-			<button type="button" class="portfolio-button portfolio-button-prev _icon-arrow-right" aria-label="Previous button"></button>
-			<button type="button" class="portfolio-button portfolio-button-next _icon-arrow-right" aria-label="Next button"></button>
+			<button type="button" class="portfolio-button portfolio-button-prev _icon-arrow-right" aria-label={m.prevButton()}></button>
+			<button type="button" class="portfolio-button portfolio-button-next _icon-arrow-right" aria-label={m.nextButton()}></button>
 		</div>
 	</div>
 	<div class="portfolio__slider swiper swiper-initialized swiper-horizontal swiper-backface-hidden">
@@ -11,104 +14,104 @@
 			
 		<div class="portfolio__slide swiper-slide" data-swiper-slide-index="1" style="width: 463.333px; margin-right: 25px;">
 				<div class="portfolio__slide-contentainer">
-					<img src="images/portfolio-02.webp" alt="Здравоохранение">
+					<img src="images/portfolio-02.webp" alt={m.healthcare()}>
 					<div class="portfolio__slide-content content-slide">
 						<div class="content-slide__details">
 							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
 							<div class="content-slide__text">
-								<span>Здравоохранение</span>
-								<a href="#">Учреждения Здравоохранения</a>
+									<span>{m.healthcare()}</span>
+								<a href="#">{m.healthcareInstitutions()}</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div><div class="portfolio__slide swiper-slide" data-swiper-slide-index="2" style="width: 463.333px; margin-right: 25px;">
 				<div class="portfolio__slide-contentainer">
-					<img src="images/portfolio-03.webp" alt="">
+					<img src="images/portfolio-03.webp" alt={m.healthcare()}>
 					<div class="portfolio__slide-content content-slide">
 						<div class="content-slide__details">
 							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
 							<div class="content-slide__text">
-								<span>Здравоохранение</span>
-								<a href="#">Учреждения Здравоохранения</a>
+									<span>{m.healthcare()}</span>
+								<a href="#">{m.healthcareInstitutions()}</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div><div class="portfolio__slide swiper-slide" data-swiper-slide-index="3" style="width: 463.333px; margin-right: 25px;">
 				<div class="portfolio__slide-contentainer">
-					<img src="images/portfolio-04.webp" alt="">
+					<img src="images/portfolio-04.webp" alt={m.healthcare()}>
 					<div class="portfolio__slide-content content-slide">
 						<div class="content-slide__details">
 							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
 							<div class="content-slide__text">
-								<span>Здравоохранение</span>
-								<a href="#">Учреждения Здравоохранения</a>
+									<span>{m.healthcare()}</span>
+								<a href="#">{m.healthcareInstitutions()}</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div><div class="portfolio__slide swiper-slide" data-swiper-slide-index="4" style="width: 463.333px; margin-right: 25px;">
 				<div class="portfolio__slide-contentainer">
-					<img src="images/portfolio-01.webp" alt="Здравоохранение">
+					<img src="images/portfolio-01.webp" alt={m.healthcare()}>
 					<div class="portfolio__slide-content content-slide">
 						<div class="content-slide__details">
 							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
 							<div class="content-slide__text">
-								<span>Здравоохранение</span>
-								<a href="#">Учреждения Здравоохранения</a>
+									<span>{m.healthcare()}</span>
+								<a href="#">{m.healthcareInstitutions()}</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div><div class="portfolio__slide swiper-slide" data-swiper-slide-index="5" style="width: 463.333px; margin-right: 25px;">
 				<div class="portfolio__slide-contentainer">
-					<img src="images/portfolio-02.webp" alt="Здравоохранение">
+					<img src="images/portfolio-02.webp" alt={m.healthcare()}>
 					<div class="portfolio__slide-content content-slide">
 						<div class="content-slide__details">
 							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
 							<div class="content-slide__text">
-								<span>Здравоохранение</span>
-								<a href="#">Учреждения Здравоохранения</a>
+									<span>{m.healthcare()}</span>
+								<a href="#">{m.healthcareInstitutions()}</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div><div class="portfolio__slide swiper-slide swiper-slide-prev" data-swiper-slide-index="6" style="width: 463.333px; margin-right: 25px;">
 				<div class="portfolio__slide-contentainer">
-					<img src="images/portfolio-03.webp" alt="">
+					<img src="images/portfolio-03.webp" alt={m.healthcare()}>
 					<div class="portfolio__slide-content content-slide">
 						<div class="content-slide__details">
 							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
 							<div class="content-slide__text">
-								<span>Здравоохранение</span>
-								<a href="#">Учреждения Здравоохранения</a>
+									<span>{m.healthcare()}</span>
+								<a href="#">{m.healthcareInstitutions()}</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div><div class="portfolio__slide swiper-slide swiper-slide-active" data-swiper-slide-index="7" style="width: 463.333px; margin-right: 25px;">
 				<div class="portfolio__slide-contentainer">
-					<img src="images/portfolio-04.webp" alt="">
+					<img src="images/portfolio-04.webp" alt={m.healthcare()}>
 					<div class="portfolio__slide-content content-slide">
 						<div class="content-slide__details">
 							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
 							<div class="content-slide__text">
-								<span>Здравоохранение</span>
-								<a href="#">Учреждения Здравоохранения</a>
+									<span>{m.healthcare()}</span>
+								<a href="#">{m.healthcareInstitutions()}</a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div><div class="portfolio__slide swiper-slide swiper-slide-next" data-swiper-slide-index="0" style="width: 463.333px; margin-right: 25px;">
 				<div class="portfolio__slide-contentainer">
-					<img src="images/portfolio-01.webp" alt="Здравоохранение">
+					<img src="images/portfolio-01.webp" alt={m.healthcare()}>
 					<div class="portfolio__slide-content content-slide">
 						<div class="content-slide__details">
 							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
 							<div class="content-slide__text">
-								<span>Здравоохранение</span>
-								<a href="#">Учреждения Здравоохранения</a>
+									<span>{m.healthcare()}</span>
+								<a href="#">{m.healthcareInstitutions()}</a>
 							</div>
 						</div>
 					</div>
