--- a/src/pages/ge/index.astro
+++ b/src/pages/ge/index.astro
@@ -57,6 +57,6 @@ import * as m from "../../paraglide/messages.js"
 		</main>
 		<Footer />
 	</div>
-	<script src="app.js" is:inline></script>
+	<!-- <script src="app.js" is:inline></script> -->
 </body>
 </html>
