--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -14,7 +14,7 @@ import * as m from "../../paraglide/messages.js";
 ---
 
 <!doctype html>
-<html lang="en" style="background: #FFFFFF;">
+<html lang="en">
 	<head>
 		<title>{m.pageTitle()}</title>
 		<meta charset="UTF-8" />
