--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import * as m from "../paraglide/messages.js";
 ---
 
 <!doctype html>
-<html lang="ge" style="background: #FFFFFF;">
+<html lang="ge">
 	<head>
 		<title>{m.pageTitle()}</title>
 		<meta charset="UTF-8" />
