--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -89,7 +89,8 @@
   body,
   html {
     height: 100%;
-    min-width: 320px
+    min-width: 320px;
+    opacity: 1 !important;
   }
   body {
     color: var(--body-color);
