--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,5 +1,6 @@
 ---
-import * as m from "../paraglide/messages.js"
+import * as m from '../paraglide/messages.js';
+import { Icon } from 'astro-icon/components';
 ---
 
 <section class="projects">
@@ -17,7 +18,9 @@ import * as m from "../paraglide/messages.js"
 							<span>{m.healthcare()}</span>
 							<a href="#">{m.healthcareInstitutions()}</a>
 						</div>
-						<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+						<a href="#" class="content-slide__icon _icon-arrow-up-right">
+							<Icon name="arrowUpRight" class="projects-arrow-up-right"/>
+						</a>
 					</div>
 				</div>
 			</li>
@@ -27,9 +30,11 @@ import * as m from "../paraglide/messages.js"
 					<div class="content-slide__details">
 						<div class="content-slide__text">
 							<span>{m.housing()}</span>
-							<a href="#">{m.eliteHouseRenovation()}</a>
+							<a href="#">{m.eliteHouseRenovation()} />
 						</div>
-						<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+						<a href="#" class="content-slide__icon _icon-arrow-up-right">
+							<Icon name="arrowUpRight" class="projects-arrow-up-right"/>
+						</a>
 					</div>
 				</div>
 			</li>
@@ -41,7 +46,9 @@ import * as m from "../paraglide/messages.js"
 							<span>{m.publicPlaces()}</span>
 							<a href="#">{m.culturalSportsCenter()}</a>
 						</div>
-						<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+						<a href="#" class="content-slide__icon _icon-arrow-up-right">
+							<Icon name="arrowUpRight" class="projects-arrow-up-right"/>
+						</a>
 					</div>
 				</div>
 			</li>
@@ -53,7 +60,9 @@ import * as m from "../paraglide/messages.js"
 							<span>{m.industry()}</span>
 							<a href="#">{m.industrialWarehouse()}</a>
 						</div>
-						<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+						<a href="#" class="content-slide__icon _icon-arrow-up-right">
+							<Icon name="arrowUpRight" class="projects-arrow-up-right"/>
+						</a>
 					</div>
 				</div>
 			</li>
