--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 ---
-import * as m from "../paraglide/messages.js"
+import * as m from '../paraglide/messages.js';
 ---
 
 <section class="hero">
@@ -9,7 +9,9 @@ import * as m from "../paraglide/messages.js"
 				<span>{m.heroTitleLine1()}</span>
 				<span>{m.heroTitleLine2()}</span>
 			</h1>
-			<a href="#" class="hero__button button _icon-arrow-up-right">{m.heroButton()}</a>
+			<a href="#" class="hero__button button _icon-arrow-up-right">
+				{m.heroButton()}
+			</a>
 		</div>
 	</div>
 	<!-- <img src="images/hero-img.webp" alt="Hero"> -->
