--- a/src/components/PageLinks.astro
+++ b/src/components/PageLinks.astro
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/styles/style.css" />
+<link rel="stylesheet" href="/styles/style.css?v=2" />
 <link rel="shortcut icon" href="/favicon.ico" />
 <link rel="icon" href="/favicon.webp" sizes="32x32" />
 <link rel="icon" href="/favicon.webp" sizes="192x192" />
